syntax = "proto3";

package gateway.v1;

import "google/api/annotations.proto";

service GeeterService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {
    option (google.api.http) = {
      post : "/v1/messsage"
      body : "*"
    };
  }
}

message SayHelloRequest { string name = 1; }

message SayHelloResponse { string message = 1; }